removed isBlank method invocation